# C2-CLIENT-DEMO

./: .gitignore  README.md
cpp-remote-client/: ._README.md  ._build.sh  CMakeLists.txt  README.md  build.sh  build.sh.save  hollower.cpp
cpp-remote-client/drp/: update.cpp
cpp-remote-client/src/: ._client.id  ._main.cpp  ._sqlite3.c  base64.cpp  base64.h  camera.cpp  camera.h  chat.cpp  chat.h  client.id  clipboard.cpp  clipboard.h  file_manager.cpp  file_manager.h  file_transfer.cpp  file_transfer.h  handle_file_transfer.cpp  handle_file_transfer.h  handle_security.cpp  handle_security.h  help.cpp  help.h  keylogger.cpp  keylogger.h  machine_id.txt  main.cpp  pdf_data.h  power_control.cpp  power_control.h  process_manager.cpp  process_manager.h  recording.cpp  recording.h  resource.h  resource.rc  screen_share.cpp  screen_share.h  screenshot.cpp  screenshot.h  security.cpp  (+13 more)
